Switch to Redcarpet and enable extensions

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
+markdown: redcarpet
+redcarpet:
+  extensions:
+    - smart
+    - strikethrough
+    - superscript
+    - tables
+
 name: Curtis McEnroe
 email: curtis@cmcenroe.me
 domain: cmcenroe.me
