Add Careen to projects

--- a/_config.yml
+++ b/_config.yml
@@ -180,6 +180,13 @@ projects:
 
   - name: Development
     items:
+      - name: Careen
+        repo: programble/careen
+        tech: [TypeScript]
+        year: 2015
+        icon: fa-database
+        desc: SQL schema migration manager
+
       - name: Pult
         repo: programble/pult
         tech: [Node.js]
