--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,22 @@ gems:
   - jekyll-feed
   - jemoji
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: post
+  - scope:
+      path: ""
+      type: "drafts"
+    values:
+      layout: post
+
 name: Curtis McEnroe
 email: curtis@cmcenroe.me
 domain: cmcenroe.me
