Add back Atom feed

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+gems:
+  - jekyll-feed
+
 kramdown:
   input: GFM
   hard_wrap: false
@@ -20,6 +23,7 @@ defaults:
 
 name: Curtis McEnroe
 email: curtis@cmcenroe.me
+url: https://cmcenroe.me
 domain: cmcenroe.me
 gravatar: ca0c9cb798fd7f80444740a4dbaef7b9
 
