Temporarily hide resume
It doesn't really need to be so public anyway. I need to figure out what
to do with Hopper.

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ nav:
     - name: Projects
       href: /projects.html
 
-    - name: Résumé
-      href: /resume.html
+    #- name: Résumé
+    #- href: /resume.html
 
   links:
     - name: GitHub
