Update github username

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://cmcenroe.me
 name: C. McEnroe
 domain: cmcenroe.me
 email: june@causal.agency
-github: programble
+github: causal-agent
 
 defaults:
   - scope:
