--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gems:
   - jekyll-feed
 url: https://cmcenroe.me
 
-name: C. McEnroe
+name: who?
 domain: cmcenroe.me
 email: june@causal.agency
 github: causal-agent
